# vaultkeep

./: .gitignore  LICENSE  README.md  RELEASE.md  architecture_and_design.md  install.sh  pyproject.toml  requirements-dev.in  requirements.in
.github/workflows/: ci.yml
examples/: vaultkeep-job.yaml.disabled
src/vaultkeep/: __init__.py  __main__.py  errors.py  hooks.py  locking.py  scheduling.py  version.py  workflow.py
src/vaultkeep/archive/: __init__.py  base.py  builder.py  checksums.py  passwords.py  process.py  tar_7z.py  tar_input.py  tar_zstd.py  verification.py
src/vaultkeep/cli/: __init__.py  commands.py  parser.py
src/vaultkeep/config/: __init__.py  loader.py  models.py
src/vaultkeep/destination/: __init__.py  creation.py  discovery.py  finalize.py  manifest.py  pruning.py  templates.py
src/vaultkeep/retention/: __init__.py  planner.py
src/vaultkeep/sources/: __init__.py  discovery.py  entries.py  exclusions.py  hashing.py
src/vaultkeep/state/: __init__.py  atomic.py  identity.py  local_state.py  models.py  transitions.py  (+1 more)
systemd/: vaultkeep@.service  vaultkeep@.timer
tests/: conftest.py
tests/integration/: test_archive_tools.py  test_release_gates.py
tests/unit/: test_archive.py  test_archive_process.py  test_cli_commands.py  test_config_loader.py  test_config_models.py  test_destination_discovery.py  test_destination_finalize.py  test_hashing.py  test_hooks.py  test_installer_script.py  test_retention.py  test_scheduling.py  test_semantic_validation.py  test_source_discovery.py  test_state.py  test_version.py  test_workflow_hooks.py
(+2 files in other folders)
